fixed scss and added profile component

--- a/game-list/client/src/components/App/App.scss
+++ b/game-list/client/src/components/App/App.scss
@@ -1,11 +1,5 @@
 .linkContainer{
-    padding: 1em;
-
-
-
-a{
-    color: palevioletred;
-    text-transform: uppercase;
-
-}
+    h1{
+        color: aqua;
+    }
 }
