--- a/game-list/client/src/components/UnloggedBanner/UnloggedBanner.module.scss
+++ b/game-list/client/src/components/UnloggedBanner/UnloggedBanner.module.scss
@@ -23,3 +23,17 @@
 .logo a:hover{
     text-decoration: none;
 }
+.register{
+    color: white;
+    text-decoration: none;
+    border-style: solid;
+    border-color: white;
+    border-width: 1px;
+    padding: 5px;
+    float: right;
+    margin-top: 28px;
+    border-radius: 20px;
+    width: 6em;
+    text-align: center;
+    margin-left: 2em;
+}
