--- a/game-list/client/src/components/NewUser/NewUser.module.scss
+++ b/game-list/client/src/components/NewUser/NewUser.module.scss
@@ -1,3 +1,13 @@
-.text {
+.form {
     color: white;
+    width: 70%;
+    margin: 0 auto;
+}
+.form h1{
+    color: white;
+}
+.input {
+    width: 50%;
+    margin: 0 auto;
+    border-radius: 5px;
 }
