--- a/game-list/client/src/components/NewUser/NewUser.module.scss
+++ b/game-list/client/src/components/NewUser/NewUser.module.scss
@@ -1,13 +1,23 @@
 .form {
     color: white;
-    width: 70%;
     margin: 0 auto;
 }
 .form h1{
     color: white;
 }
 .input {
-    width: 50%;
+    color: black;
     margin: 0 auto;
     border-radius: 5px;
+    width: 21em;
+    height: 2em;
+    font-size: 24px;
+}
+.inputName {
+    color: black;
+    margin: 0 auto;
+    border-radius: 5px;
+    width: 20em;
+    height: 2em;
+    font-size: 24px;
 }
