--- a/client/src/components/Forum/Forum.scss
+++ b/client/src/components/Forum/Forum.scss
@@ -2,3 +2,19 @@
     margin-left: 20%;
     width: 60%;
 }
+
+.Scroll{
+    @import url(https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css);
+    position: fixed;
+    bottom: 20px;
+    right: 30px;
+    z-index: 99;
+    font-size: 18px;
+    border: none;
+    outline: none;
+    background:linear-gradient(#9c129e, #630664);
+    color: white;
+    cursor: pointer;
+    padding: 15px;
+    border-radius: 4px;
+}
