added bootstrap to home page

--- a/client/src/components/Forum/Forum.scss
+++ b/client/src/components/Forum/Forum.scss
@@ -3,6 +3,8 @@
     width: 60%;
 }
 
+
+
 .Scroll{
     @import url(https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css);
     position: fixed;
@@ -17,4 +19,8 @@
     cursor: pointer;
     padding: 15px;
     border-radius: 4px;
+}
+
+.split{
+    margin-top: 10%;
 }
