--- a/client/src/components/ForumCarousel/ForumCarousel.module.scss
+++ b/client/src/components/ForumCarousel/ForumCarousel.module.scss
@@ -9,3 +9,15 @@
     padding: 3em;
     border-radius: 3px;
 }
+
+.images{
+    
+    height: 30em;
+    width: 100%;
+}
+
+// removes arrow
+.arrow{
+    opacity: 0;
+   
+}
