--- a/client/src/components/UnloggedBanner/UnloggedBanner.module.scss
+++ b/client/src/components/UnloggedBanner/UnloggedBanner.module.scss
@@ -6,9 +6,10 @@
 }
 .logged_out_content{
     width: 80%;
-    height: 100%;
+    height: 90%;
     margin: 0 auto;
     color: white;
+    
 }
 .logged_out_content h1 {
     display: inline-block;
@@ -16,6 +17,7 @@
 .logo{
     color: white;
     font-size: 3em;
+    float: right;
 }
 
 .link{
