--- a/client/src/components/Home/Home.module.scss
+++ b/client/src/components/Home/Home.module.scss
@@ -28,3 +28,9 @@
     background-repeat: no-repeat;
     background-size: cover;
 }
+.post{
+    margin: 0 auto;
+    background-color: white;
+    color: black;
+    width: 50%;
+}
