--- a/client/src/components/App/App.scss
+++ b/client/src/components/App/App.scss
@@ -1,8 +1,5 @@
 .linkContainer{
     padding: 1em;
-
-
-
 a{
     color: palevioletred;
     text-transform: uppercase;
@@ -11,7 +8,7 @@ a{
 }
 
 body {
-    background:linear-gradient( #333536, #131618);
+    background:#121212;
     margin: 0;
     padding: 0;
     height: 100%;
