add friends and friend list

--- a/client/src/components/LoggedBanner/LoggedBanner.module.scss
+++ b/client/src/components/LoggedBanner/LoggedBanner.module.scss
@@ -30,3 +30,16 @@
 .link :hover {
     background: #630664;
 }
+.dropdown{
+    color: black;
+}
+.button {
+    background-color: none;
+    color: white;
+    text-decoration: none;
+    margin-left: 2em;
+    font-size: 12px;
+}
+.button :hover{
+    background-color: black;
+}
