--- a/client/src/components/NewUser/NewUser.module.scss
+++ b/client/src/components/NewUser/NewUser.module.scss
@@ -9,7 +9,8 @@
     color: black;
     margin: 0 auto;
     border-radius: 5px;
-    width: 21em;
+    width: 90%;
+    // width: 21em;
     height: 2em;
     font-size: 24px;
 }
@@ -17,7 +18,8 @@
     color: black;
     margin: 0 auto;
     border-radius: 5px;
-    width: 20em;
+    // width: 20em;
+    width: 40%;
     height: 2em;
     font-size: 24px;
 }
