--- a/client/src/components/ForumCarousel/ForumCarousel.module.scss
+++ b/client/src/components/ForumCarousel/ForumCarousel.module.scss
@@ -1,6 +1,10 @@
-.carousel{
-    height: 45em;
-}
+// .carousel{
+//     height: 45em;
+
+//     @media screen and (max-width: 800px) {
+//         height: 10em;
+//       }
+// }
 .right.carousel-control, .left.carousel-control {
     display: none;
 }
@@ -8,13 +12,25 @@
     background-color: white;
     padding: 3em;
     border-radius: 3px;
+    
 }
 
 .images{
     
-    height: 30em;
+    height: 25em;
     width: 100%;
+
+    @media screen and (max-width: 800px) {
+        height: 20em;
+        display: block;
+      }
 }
+
+// @media screen and (min-width: 700px) {
+//     .images {
+//         height: 25em;
+//     }
+// }
 
 // removes arrow
 .arrow{
