--- a/client/src/components/UnloggedBanner/UnloggedBanner.module.scss
+++ b/client/src/components/UnloggedBanner/UnloggedBanner.module.scss
@@ -32,3 +32,13 @@
 .link :hover {
     background: #630664;
 }
+
+// .register{
+
+//     margin-right: 600%;
+
+//     @media screen and (max-width: 450px) {
+//         margin-right: 200%;
+//       }
+
+// }
