--- a/client/src/components/Profile/ProfileCard.scss
+++ b/client/src/components/Profile/ProfileCard.scss
@@ -127,13 +127,27 @@ div:nth-child(1){
 .ProfileViewPort{
   
   .boxedDiv{
-    background-color: #893667;
-    margin-top: 10%;
     
-    border: 3px solid black;
-    width: 100%;
-    height: 500px;
-    border-radius: 50px;
+      position: relative;
+      width: 100%;
+      height: 500px;
+      margin: 20px 0;
+      background: black;
+      border-radius: 50% / 10%;
+      color: white;
+      text-align: center;
+      text-indent: .1em;
+    
+      .boxedDiv:before {
+      content: '';
+      position: absolute;
+      top: 10%;
+      bottom: 10%;
+      right: -5%;
+      left: -5%;
+      background: inherit;
+      border-radius: 5% / 50%;
+    }
   }
 
 }
