--- a/client/src/components/auth/authButton.module.scss
+++ b/client/src/components/auth/authButton.module.scss
@@ -3,4 +3,9 @@
     text-decoration: none;
     text-align: center;
     float: right;
+    margin-right: 300%;
+
+    @media screen and (max-width: 450px) {
+        margin-right: 200%;
+      }
 }
