updates to profile and posts

--- a/client/src/components/LoggedBanner/LoggedBanner.module.scss
+++ b/client/src/components/LoggedBanner/LoggedBanner.module.scss
@@ -3,6 +3,9 @@
     width: 100%;
     background:linear-gradient(#9c129e, #630664);
     color: white;
+    margin: 0em 0em;
+    position: fixed;
+    top: 0;
 }
 .logged_out_content{
     width: 80%;
