--- a/client/src/components/Profile/UserPosts/UserPosts.module.scss
+++ b/client/src/components/Profile/UserPosts/UserPosts.module.scss
@@ -4,11 +4,11 @@
     border-radius: 100px;
 }
 .postDiv{
-    width: 30%;
+    width: 100%;
     color: #f5f5f5;
     background-color: #181818;
     padding: 1em;
-    margin: 0 auto;
+    margin-top: 0;
 }
 .allpost{
     margin: 0em 0em;
