Fixed the navbar links.

--- a/client/src/components/LoggedBanner/LoggedBanner.module.scss
+++ b/client/src/components/LoggedBanner/LoggedBanner.module.scss
@@ -5,7 +5,7 @@
     width: 100%;
     background:linear-gradient(#9c129e, #630664);
     color: white;
-    display: flex;
+    // display: flex;
     align-items: center;
     justify-content: space-between;
     padding: 0 5em; 
