--- a/client/src/components/Forum/Forum.scss
+++ b/client/src/components/Forum/Forum.scss
@@ -28,3 +28,173 @@
 .space{
     margin-top: 3%;
 }
+
+.accordion {
+    background-color: #eee;
+    color: #444;
+    cursor: pointer;
+    padding: 18px;
+    width: 100%;
+    border: none;
+    text-align: left;
+    outline: none;
+    font-size: 15px;
+    transition: 0.4s;
+}
+
+.active, .accordion:hover {
+    background-color: #ccc; 
+}
+
+.panel {
+    padding: 0 18px;
+    display: none;
+    background-color: white;
+    overflow: hidden;
+}
+
+.accordion-template{
+    width:360px;
+    margin: auto;
+  }
+  .p0 {
+    padding: 0;
+  }
+  
+  h2 {
+    line-height: 0.5;
+    padding-right: 15px;
+  }
+  h2:before {
+    font-weight: 300;
+    content: "-";
+    font-size: 65px;
+    line-height: 0.1;
+    color: #fff;
+  }
+  
+  div[role="tablist"] a[aria-expanded="false"] h2:before,
+  div[role="tablist"]
+    .pagination
+    > li.active
+    a[aria-expanded="false"]:focus
+    h2:before,
+  .pagination
+    > li.active
+    div[role="tablist"]
+    a[aria-expanded="false"]:focus
+    h2:before,
+  div[role="tablist"]
+    .pagination
+    > li.active
+    a[aria-expanded="false"]:hover
+    h2:before,
+  .pagination
+    > li.active
+    div[role="tablist"]
+    a[aria-expanded="false"]:hover
+    h2:before {
+    content: "+";
+    font-size: 32px;
+    color: #000;
+  }
+  
+  div[role="tablist"] a[aria-expanded="false"] bill-type,
+  div[role="tablist"]
+    .pagination
+    > li.active
+    a[aria-expanded="false"]:focus
+    bill-type,
+  .pagination
+    > li.active
+    div[role="tablist"]
+    a[aria-expanded="false"]:focus
+    bill-type,
+  div[role="tablist"]
+    .pagination
+    > li.active
+    a[aria-expanded="false"]:hover
+    bill-type,
+  .pagination
+    > li.active
+    div[role="tablist"]
+    a[aria-expanded="false"]:hover
+    bill-type {
+    color: #cd3566 !important;
+  }
+  
+  div[role="tablist"] a[aria-expanded="false"] .fgt-title,
+  div[role="tablist"]
+    .pagination
+    > li.active
+    a[aria-expanded="false"]:focus
+    .fgt-title,
+  .pagination
+    > li.active
+    div[role="tablist"]
+    a[aria-expanded="false"]:focus
+    .fgt-title,
+  div[role="tablist"]
+    .pagination
+    > li.active
+    a[aria-expanded="false"]:hover
+    .fgt-title,
+  .pagination
+    > li.active
+    div[role="tablist"]
+    a[aria-expanded="false"]:hover
+    .fgt-title {
+    background-color: #ccc;
+  }
+  
+  
+  
+  .fgt-title {
+    background-color: #cd3566;
+  }
+  
+  .panel-group .panel + .panel {
+    margin-top: 2px;
+  }
+  
+  .panel-group .panel-default {
+    border: none;
+  }
+  .panel-group .panel-default .panel-heading {
+    background-color: #ffffff;
+    border-bottom: 1px solid #7e7e7e;
+    border: none;
+  }
+  
+  .panel-group .panel-default .panel-heading bill-type {
+    font-size: 16px;
+    padding-left: 32px;
+    float: left;
+    line-height: 2.5;
+    color: #fff;
+  }
+  .panel-group .panel-default .panel-body {
+    background-color: rgba(204, 204, 204, 0.1);
+    box-shadow: 0px 3px 3px 0px rgba(0, 0, 0, 0.1) inset;
+    border: none;
+    padding: 0;
+    border-top: 1px solid rgba(126, 126, 126, 0.1);
+  }
+  .panel-group .panel-default .panel-body .list {
+    cursor: pointer;
+    padding: 8px;
+    text-align: left;
+    box-shadow: none;
+    border-bottom: 1px solid rgba(126, 126, 126, 0.1);
+    padding-left: 20px;
+  }
+  
+  .panel-group .panel-default .panel-body .list utility-title {
+    font-size: 14px;
+    padding-top: 6px;
+  
+    display: block;
+    float: left;
+    width: 75%;
+  }
+  
