--- a/client/src/components/Profile/ProfileCard.scss
+++ b/client/src/components/Profile/ProfileCard.scss
@@ -309,9 +309,12 @@
   margin: 0 auto;
   height: 22em;
 }
-.profile-image{
+.profileImage{
   background-color: #181818;
   background-image: url('https://upload.wikimedia.org/wikipedia/commons/thumb/a/ac/Circle-icons-profle.svg/1024px-Circle-icons-profle.svg.png');
   background-repeat: no-repeat;
   background-size: cover;
+}
+.clickable {
+  cursor: pointer;
 }
