Added styling to the search component. Will also add more information to the results as needed.

--- a/client/src/components/ProfileSearchContainer/ProfileSearchContainer.module.scss
+++ b/client/src/components/ProfileSearchContainer/ProfileSearchContainer.module.scss
@@ -1,10 +1,12 @@
-.imgThumb{
-    max-width: 30em;
-    max-height: 30em;
-}
+.panelParent{
+    .imgThumb{
+        max-width: 30em;
+        max-height: 30em;
+    }
 
-div{
-    h1{
-        display: inline;
+    div{
+        h1{
+            display: inline;
+        }
     }
 }
