Fixed some styling issues with the user search results page and the loading view. I am also adding a route that will allow users to edit a forum.

--- a/client/src/components/LoadingViewContainer/LoadingViewContainer.module.scss
+++ b/client/src/components/LoadingViewContainer/LoadingViewContainer.module.scss
@@ -14,7 +14,10 @@ $transparentBackgroundColor: rgba(black, 0.5);
         position: absolute;
         top: 40%;
         left: 50%;
-        margin-top: -50px;
-        margin-left: -50px;
+        // margin-top: -50px;
+        // margin-left: -50px;
+        h1{
+            padding-top: 0.5em;
+        }
     }
 }
