--- a/client/src/components/HomeNavBar/HomeNavBar.module.scss
+++ b/client/src/components/HomeNavBar/HomeNavBar.module.scss
@@ -19,15 +19,15 @@
     height: 630px;
     box-shadow: -10px 10px 5px black;
 }
-.homeBody{
-    background-color: white;
-    height: 100%;
-    margin: auto;
-    width: 80%; 
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-}
+// .homeBody{
+//     background-color: white;
+//     height: 100%;
+//     margin: auto;
+//     width: 80%; 
+//     background-position: center;
+//     background-repeat: no-repeat;
+//     background-size: cover;
+// }
 .post{
     margin: 0 auto;
     background-color: white;
