--- a/client/src/components/Profile/ProfileCard.scss
+++ b/client/src/components/Profile/ProfileCard.scss
@@ -318,3 +318,10 @@
 .clickable {
   cursor: pointer;
 }
+.bg{
+  position: absolute;
+  top: 0%;
+  height: 100%;
+  width: 100%;
+  z-index: -1;
+}
