Adjusting some more styles.

--- a/client/src/components/GameListContainer/GameListContainer.module.scss
+++ b/client/src/components/GameListContainer/GameListContainer.module.scss
@@ -2,7 +2,14 @@
 
 .pageNumber{
     position: relative;
+    font: bold 200px arial, sans-serif;
     left: 50%;
+    background-color: #565656;
+    color: transparent;
+    text-shadow: 2px 2px 3px rgba(255,255,255,0.5);
+    -webkit-background-clip: text;
+    -moz-background-clip: text;
+    background-clip: text;
 }
 
 .maskedTextLogo{
