--- a/client/src/components/LoadingViewContainer/LoadingViewContainer.module.scss
+++ b/client/src/components/LoadingViewContainer/LoadingViewContainer.module.scss
@@ -1,4 +1,4 @@
-$transparentBackgroundColor: rgba(black, 0.5);
+@import "../variables";
 
 .loadingPanel{
     position: absolute;
@@ -18,6 +18,7 @@ $transparentBackgroundColor: rgba(black, 0.5);
         // margin-left: -50px;
         h1{
             padding-top: 0.5em;
+            color: $secondaryColorTheme;
         }
     }
 }
