--- a/client/src/components/_variables.scss
+++ b/client/src/components/_variables.scss
@@ -1,1 +1,8 @@
 $logoBackground: url(https://media.giphy.com/media/HJ7vV2YUBHnYA/giphy.gif);
+// https://media.giphy.com/media/10YdC8IJKpPyRG/giphy.gif
+// https://media.giphy.com/media/HJ7vV2YUBHnYA/giphy.gif
+// https://media.giphy.com/media/3oKIPzFR3ajKd4YZ5m/giphy.gif
+// https://lh3.googleusercontent.com/-S8DnyswM-4M/Wk_Td80ZC0I/AAAAAAACzWA/TAFJs7kyBAM_f-7T1X5hivXdpVfAF6z0QCJoC/w480-h545-rw/Orion%2BNebula%2B%2528M42%2529%2Band%2BNGC%2B1977%2B-%2BMotion%2BEffects%2Bby%2BRexisky%2B%2528480%25E2%2580%2586%25C3%2597%25E2%2580%2586545%2529.gif
+$themeColor: linear-gradient(#9c129e, #630664);
+$secondaryColorTheme: #46bfee;
+$transparentBackgroundColor: rgba(black, 0.5);
