--- a/client/src/components/LoadingViewContainer/LoadingViewContainer.module.scss
+++ b/client/src/components/LoadingViewContainer/LoadingViewContainer.module.scss
@@ -16,6 +16,9 @@
         left: 50%;
         // margin-top: -50px;
         // margin-left: -50px;
+        .loaderContainer{
+            right: 25%;
+        }
         h1{
             padding-top: 0.5em;
             color: $secondaryColorTheme;
