--- a/client/src/components/NewPost/NewPost.module.scss
+++ b/client/src/components/NewPost/NewPost.module.scss
@@ -1,5 +1,6 @@
 .form{
-    width: 30%;
+    // width: 30%;
+    width: 50em;
     color: #f5f5f5;
     background-color: #181818;
     padding: 1em;
