--- a/client/src/components/Post/Post.module.scss
+++ b/client/src/components/Post/Post.module.scss
@@ -5,6 +5,8 @@
 }
 .postDiv{
     width: 30%;
+    // width: 40em;
+    // width: 70%;
     color: #f5f5f5;
     background-color: #181818;
     padding: 1em;
