--- a/client/src/components/Profile/UserPosts/UserPosts.module.scss
+++ b/client/src/components/Profile/UserPosts/UserPosts.module.scss
@@ -4,7 +4,8 @@
     border-radius: 100px;
 }
 .postDiv{
-    width: 100%;
+    // width: 100%;
+    width: 50em;
     color: #f5f5f5;
     background-color: #181818;
     padding: 1em;
