--- a/client/src/components/UnloggedBanner/UnloggedBanner.module.scss
+++ b/client/src/components/UnloggedBanner/UnloggedBanner.module.scss
@@ -1,3 +1,5 @@
+@import "../variables";
+
 .logged_out_banner {
     height: 4em;
     width: 100%;
@@ -15,9 +17,15 @@
     display: inline-block;
 }
 .logo{
-    color: white;
+    // color: white;
     font-size: 3em;
     float: right;
+    color: transparent !important;
+    background: $logoBackground;
+    background-size: cover;
+    background-clip: text;
+    -moz-background-clip: text;
+    -webkit-background-clip: text;
 }
 
 .link{
