edited forums added forum link to nav

--- a/client/src/components/Forum/Forum.module.scss
+++ b/client/src/components/Forum/Forum.module.scss
@@ -198,3 +198,15 @@
     width: 75%;
   }
   
+.commentStyle{
+  float: right;
+  width: 50%;
+  
+
+}
+
+.forumStyle{
+  float: left;
+  width: 50%;
+
+}
