--- a/client/src/components/Forumpage/ForumPage.scss
+++ b/client/src/components/Forumpage/ForumPage.scss
@@ -9,20 +9,20 @@
 
 
 
-.space{
-    margin-top: 10%;
+// .space{
+//    float: right;
     
-    textarea{
+//     textarea{
    
-        width: 50%;
-        height: 7em;
-    }
+//         width: 50%;
+//         height: 7em;
+//     }
 
-    input{
-        margin-bottom: 3.5%;
-    }
+//     input{
+//         margin-bottom: 3.5%;
+//     }
 
-}
+// }
 
 .post{
     width: 70%;
