--- a/client/src/components/PostForum/PostForum.module.scss
+++ b/client/src/components/PostForum/PostForum.module.scss
@@ -26,7 +26,7 @@
 }
 
 .posting{
-	  background: rgba(0, 0, 0, 0.4); 
+	  background: rgb(0, 0, 0); 
     width: 100%;
     height: 10em;
     border: none;
@@ -55,10 +55,7 @@
 //     cursor: pointer;
 // }
 
-input.nameinput {
-	  background: rgba(0, 0, 0, 0.4); 
-	  padding-left: 10%;
-}
+
 
 
 
@@ -80,7 +77,7 @@ input.nameinput {
     padding-right: 20px;
 	margin-bottom: 20px;
 	
-	background: rgba(0, 0, 0, 0.4); 
+	background: rgb(0, 0, 0); 
 	padding-left: 45px;
 	
 }
@@ -88,7 +85,7 @@ input.nameinput {
 
 
 .indent:focus, .posting:focus { 
-	  background-color: rgba(0, 0, 0, 0.2);
+	  background-color: rgb(0, 0, 0);
     -moz-box-shadow: 0 0 5px 1px rgba(255,255,255,.5);
     -webkit-box-shadow: 0 0 5px 1px rgba(255,255,255,.5);
     box-shadow: 0 0 5px 1px rgba(255,255,255,.5);
