--- a/client/src/components/App/App.scss
+++ b/client/src/components/App/App.scss
@@ -8,7 +8,8 @@ a{
 }
 
 body {
-    background:#121212;
+    background: url(http://andstud.io/wp-content/uploads/2014/03/blurrrr2.jpg)no-repeat center center fixed;
+   background-size: cover;
     margin: 0;
     padding: 0;
     height: 100%;
