Fixed some styling. Added glass panels to user game listing.

--- a/client/src/components/_variables.scss
+++ b/client/src/components/_variables.scss
@@ -6,3 +6,5 @@ $logoBackground: url(https://media.giphy.com/media/HJ7vV2YUBHnYA/giphy.gif);
 $themeColor: linear-gradient(#9c129e, #630664);
 $secondaryColorTheme: #46bfee;
 $transparentBackgroundColor: rgba(black, 0.5);
+// $secondaryTextTheme: rgba(#1488CC, 0.85);
+$secondaryTextTheme: rgba(white, 0.9);
