--- a/client/src/components/ProfileSearchContainer/ProfileSearchContainer.module.scss
+++ b/client/src/components/ProfileSearchContainer/ProfileSearchContainer.module.scss
@@ -1,9 +1,4 @@
 .panelParent{
-    .imgThumb{
-        max-width: 30em;
-        max-height: 30em;
-    }
-
     div{
         h1{
             display: inline;
@@ -11,7 +6,18 @@
     }
 }
 
+.imgThumb{
+    width: 6em;
+    height: auto;
+    border-radius: 100px;
+}
 
 .panelContainer{
     margin: 1em 10em;
+}
+.postDiv{
+    color: #f5f5f5;
+    background-color: #181818;
+    padding: 1em;
+    margin: 0 auto;
 }
