--- a/client/src/components/NewPost/NewPost.module.scss
+++ b/client/src/components/NewPost/NewPost.module.scss
@@ -1,6 +1,5 @@
 .form{
-    // width: 30%;
-    width: 55em;
+    width: 50%;
     color: #f5f5f5;
     background-color: #181818;
     padding: 1em;
