Added some more styling and glass panels.

--- a/client/src/components/LoadingViewContainer/LoadingViewContainer.module.scss
+++ b/client/src/components/LoadingViewContainer/LoadingViewContainer.module.scss
@@ -8,7 +8,10 @@
     bottom: 0;
     // margin: auto;
     z-index: 1000;
-    background-color: $transparentBackgroundColor;
+    // background-color: $transparentBackgroundColor;
+    @include blurElement();
+
+    
 
     .ringLoader{
         position: absolute;
@@ -25,3 +28,11 @@
         }
     }
 }
+
+// .loadingPanel::before{
+//     // -webkit-filter: blur(5px);
+//     // -moz-filter: blur(5px);
+//     // -o-filter: blur(5px);
+//     // -ms-filter: blur(5px);
+//     // filter: blur(5px);
+// }
