--- a/client/src/components/App/App.scss
+++ b/client/src/components/App/App.scss
@@ -31,10 +31,11 @@ html {
 .panel{
     // background-color: rgba(0, 0, 0, 0.5);
     // background: linear-gradient(0deg, rgba(0,0,0,0.5) 0%, rgba(46,46,47,0.5) 35%);
-    background: #000000;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to top, #434343, #000000);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to top, rgba(#434343, 0.3), rgba(#000000, 0.5)); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    box-shadow: 0 0 1000px 1px #434343;
+    // background: #000000;  /* fallback for old browsers */
+    // background: -webkit-linear-gradient(to top, #434343, #000000);  /* Chrome 10-25, Safari 5.1-6 */
+    // background: linear-gradient(to top, rgba(#434343, 0.3), rgba(#000000, 0.5)); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    // box-shadow: 0 0 1000px 1px #434343;
+    @include blurElement();
     color: $secondaryTextTheme;
 
 }
