--- a/client/src/components/ListingPage/ListingPage.module.scss
+++ b/client/src/components/ListingPage/ListingPage.module.scss
@@ -1,8 +1,12 @@
+@import "../variables";
+
 .mainDiv{
-    border: 1px solid black;
+    border: 1px none black;
     border-radius: 2em;
     padding: 1em;
-    background-color: white;
+    // background-color: white;
+    @include blurElement();
+    color: $secondaryTextTheme;
 
     img{
         width: 10em;
@@ -10,6 +14,6 @@
     }
     margin: 2em;
     h1{
-        color: black;
+        color: $secondaryTextTheme;
     }
 }
