added promise.all for edit user info and edit social media. styled the inputs for adding and editing socials and user stuff

--- a/client/src/components/App/App.scss
+++ b/client/src/components/App/App.scss
@@ -25,3 +25,39 @@ html {
 .right.carousel-control, .left.carousel-control {
     display: none;
 }
+
+.ion-social-twitter-outline {
+    font-size: 2em;
+    margin-left: 0.5em;
+    color: white;
+}
+
+.ion-social-instagram {
+    font-size: 2em;
+    margin-left: 0.5em;
+    color: white;
+}
+
+.ion-social-twitch-outline {
+    font-size: 2em;
+    margin-left: 0.5em;
+    color: white;
+}
+
+.ion-social-youtube-outline {
+    font-size: 2em;
+    margin-left: 0.5em;
+    color: white;
+}
+
+.ion-person {
+    font-size: 2em;
+    margin-left: 0.5em;
+    color: white;
+}
+
+.ion-at {
+    font-size: 2em;
+    margin-left: 0.5em;
+    color: white;
+}
