likes completely working

--- a/client/src/components/Post/Post.module.scss
+++ b/client/src/components/Post/Post.module.scss
@@ -15,3 +15,11 @@
 .allpost{
     margin: 0em 0em;
 }
+
+.LikeButton{
+    cursor: pointer;
+}
+.LikedButton{
+    cursor: pointer;
+    color: red;
+}
