--- a/client/src/components/App/App.scss
+++ b/client/src/components/App/App.scss
@@ -61,3 +61,10 @@ html {
     margin-left: 0.5em;
     color: white;
 }
+
+.ion-edit {
+    font-size: 2em;
+    margin-left: 0.5em;
+    color: yellow;
+    float: right;
+}
