Added some more styling.

--- a/client/src/components/_variables.scss
+++ b/client/src/components/_variables.scss
@@ -7,6 +7,7 @@ $themeColor: linear-gradient(#9c129e, #630664);
 // $secondaryColorTheme: #46bfee;
 $secondaryColorTheme: rgba(#4d4dff, 0.95);
 $transparentBackgroundColor: rgba(black, 0.5);
+$ternaryColorTheme: white;
 // $secondaryTextTheme: rgba(#1488CC, 0.85);
 $secondaryTextTheme: rgba(white, 0.9);
 $primaryGlassGradientFallback: #000000;
