--- a/client/src/components/GameListContainer/GameListContainer.module.scss
+++ b/client/src/components/GameListContainer/GameListContainer.module.scss
@@ -11,6 +11,8 @@
     // -moz-background-clip: text;
     // background-clip: text;
 
+    color: rgba($ternaryColorTheme, 0.9);
+
     text-shadow: 0 1px 0 #ccc,
                0 2px 0 #c9c9c9,
                0 3px 0 #bbb,
@@ -23,6 +25,13 @@
                0 5px 10px rgba(0,0,0,.25),
                0 10px 10px rgba(0,0,0,.2),
                0 20px 20px rgba(0,0,0,.15);
+}
+
+.listNav{
+    height: 4em;
+    // margin: auto 0;
+    // text-align: center;
+    background: rgba($ternaryColorTheme, 0.9)
 }
 
 .maskedTextLogo{
