--- a/client/src/components/App/App.scss
+++ b/client/src/components/App/App.scss
@@ -69,6 +69,7 @@ html {
     margin-left: 0.5em;
     color: yellow;
     float: right;
+}
 .panel{
     // background-color: rgba(0, 0, 0, 0.5);
     // background: linear-gradient(0deg, rgba(0,0,0,0.5) 0%, rgba(46,46,47,0.5) 35%);
