--- a/client/src/components/App/App.scss
+++ b/client/src/components/App/App.scss
@@ -81,3 +81,8 @@ html {
     color: $secondaryTextTheme;
 
 }
+
+.nav>li>a:focus, .nav>li>a:hover {
+    text-decoration: none;
+    background-color: transparent !important;
+}
