adding particles and @ for handles

--- a/client/src/components/Forum/Forum.module.scss
+++ b/client/src/components/Forum/Forum.module.scss
@@ -245,3 +245,11 @@ textarea{
 .styleText:hover .styleText:focus{
   border: none;
 }
+
+.bg{
+  position: absolute;
+  top: 0%;
+  height: 100%;
+  width: 100%;
+  z-index: -1;
+}
