--- a/client/src/components/Forumpage/ForumPage.scss
+++ b/client/src/components/Forumpage/ForumPage.scss
@@ -7,7 +7,13 @@
     height: 1600px;
 }
 
-
+.bg{
+    position: absolute;
+    top: 0%;
+    height: 100%;
+    width: 100%;
+    z-index: -1;
+}
 
 // .space{
 //    float: right;
