--- a/client/src/components/auth/login.module.scss
+++ b/client/src/components/auth/login.module.scss
@@ -9,3 +9,11 @@ h1 {
     width: 20%;
     margin: 0 auto;
 }
+
+.bg{
+    position: absolute;
+    top: 0%;
+    height: 100%;
+    width: 100%;
+    z-index: -1;
+}
