--- a/client/src/components/socials/social.module.scss
+++ b/client/src/components/socials/social.module.scss
@@ -13,6 +13,7 @@
     margin: 1em 0 1em 0;
     width: 35%;
     background-color: black;
+    padding: 0.25em;
 }
 
 .handle {
@@ -21,6 +22,7 @@
     margin: 1em 0 1em 0;
     width: 35%;
     background-color: black;
+    padding: 0.25em;
 }
 
 // .bodyTwo {
@@ -34,6 +36,7 @@
     margin: 1em 0 1em 0;
     width: 35%;
     background-color: black;
+    padding: 0.25em;
 }
 
 .instagramTwo {
@@ -42,6 +45,7 @@
     margin: 1em 0 1em 0;
     width: 35%;
     background-color: black;
+    padding: 0.25em;
 }
 
 
@@ -51,6 +55,7 @@
     margin: 1em 0 1em 0;
     width: 35%;
     background-color: black;
+    padding: 0.25em;
 }
 
 .youtubeTwo {
@@ -59,6 +64,7 @@
     margin: 1em 0 1em 0;
     width: 35%;
     background-color: black;
+    padding: 0.25em;
 }
 
 .button {
