--- a/client/src/components/UserGameListContainer/UserGameListContainer.module.scss
+++ b/client/src/components/UserGameListContainer/UserGameListContainer.module.scss
@@ -1,3 +1,5 @@
+@import "../variables";
+
 .mainPiece{
     .transparentBackground{
         background-color: transparent;
@@ -47,4 +49,14 @@
     height: 100%;
     width: 100%;
     z-index: -1;
+}
+
+.chevron{
+    position: fixed;
+    cursor: pointer;
+    left: 90%;
+    top: 90%;
+    font-size: 5em;
+    color: $ternaryTextTheme;
+    text-shadow: 0 2px 150px rgba(grey, 0.8);
 }
