--- a/client/src/components/NewUser/NewUser.module.scss
+++ b/client/src/components/NewUser/NewUser.module.scss
@@ -11,7 +11,8 @@
     margin: 0 auto;
     border-radius: 5px;
     width: 90%;
-    height: 2em;
+    height: 2.5em;
+    padding: 0 0.5em;
     font-size: 24px;
 }
 .inputName {
@@ -20,6 +21,7 @@
     border-radius: 5px;
     // width: 20em;
     width: 40%;
-    height: 2em;
+    height: 2.5em;
+    padding: 0 0.5em;
     font-size: 24px;
 }
