added some new styling

--- a/client/src/components/App/App.scss
+++ b/client/src/components/App/App.scss
@@ -34,6 +34,12 @@ html {
     color: white;
 }
 
+.ion-social-twitter {
+    font-size: 2em;
+    margin-left: 0.5em;
+    color: skyblue;
+}
+
 .ion-social-instagram {
     font-size: 2em;
     margin-left: 0.5em;
@@ -46,10 +52,28 @@ html {
     color: white;
 }
 
+.ion-social-instagram-outline {
+    font-size: 2em;
+    margin-left: 0.5em;
+    color: palevioletred;
+}
+
+.ion-social-twitch {
+    font-size: 2em;
+    margin-left: 0.5em;
+    color: purple;
+}
+
 .ion-social-youtube-outline {
     font-size: 2em;
     margin-left: 0.5em;
     color: white;
+}
+
+.ion-social-youtube {
+    font-size: 2em;
+    margin-left: 0.5em;
+    color: red;
 }
 
 .ion-person {
@@ -62,6 +86,14 @@ html {
     font-size: 2em;
     margin-left: 0.5em;
     color: white;
+}
+
+.ion-android-share-alt {
+    font-size: 2em;
+    margin-left: 0.5em;
+    color: orange;
+    float: left;
+    position: relative;
 }
 
 .ion-edit {
