--- a/client/src/components/socials/social.module.scss
+++ b/client/src/components/socials/social.module.scss
@@ -8,6 +8,44 @@
     color: white;
 }
 
+.spacingTwitter {
+    word-spacing: 3em;
+    font-size: 1.5em;
+}
+
+.spacingInsta {
+    word-spacing: 3.3em;
+    font-size: 1.5em;
+}
+
+.spacingTwitch {
+    word-spacing: 3.3em;
+    font-size: 1.5em;
+}
+
+.spacingTube {
+    word-spacing: 3em;
+    font-size: 1.5em;
+}
+
+.socialTable {
+    width: 15%;
+    font-size: 1em;
+    margin: 0 auto;
+    padding-top: 5em;
+}
+
+.headingSocial {
+    text-transform: capitalize;
+    color: white;
+
+}
+
+.ionSocialInstagram {
+    font-size: 2em;
+    margin-left: 0.5em;
+    color: white;
+}
 
 .avatar {
     color: black;
@@ -94,4 +132,12 @@
 
 .move {
     padding-top: 4em;
+}
+
+.bgTwo{
+    position: absolute;
+    top: 0%;
+    height: 100%;
+    width: 100%;
+    z-index: -1;
 }
