see a users social media

--- a/client/src/components/socials/social.module.scss
+++ b/client/src/components/socials/social.module.scss
@@ -9,27 +9,30 @@
 }
 
 .spacingTwitter {
-    word-spacing: 3em;
     font-size: 1.5em;
+    margin-left: 1em;
 }
 
 .spacingInsta {
-    word-spacing: 3.3em;
     font-size: 1.5em;
+    margin-left: 1em;
+
 }
 
 .spacingTwitch {
-    word-spacing: 3.3em;
     font-size: 1.5em;
+    margin-left: 1em;
+
 }
 
 .spacingTube {
-    word-spacing: 3em;
     font-size: 1.5em;
+    margin-left: 1em;
+
 }
 
 .socialTable {
-    width: 15%;
+    width: 25%;
     font-size: 1em;
     margin: 0 auto;
     padding-top: 5em;
